# Checksum-Sentinel

./: .gitignore  Cargo.toml  README.md  install.sh  pyproject.toml
css_update/: __init__.py  __main__.py
src/: arg.rs  checks.rs  daemon.rs  data_handling.rs  main.rs  poll_sources.rs  user_notification.rs
systemd/: css-update-persistent.service  css-update-persistent.timer  css-update-recent.service  css-update-recent.timer  css.service
systemd/no-daemon/: css-update-persistent.service  css-update-recent.service
