[package]
name = "Checksum-Sentinel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "css"
path = "src/main.rs"

[dependencies]
digest = "0.10.7"
generic-array = "0.14"
md-5 = "0.10.6"
notify = "8.2.0"
notify-rust = "4.11.7"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
yara = "0.30.0"
