[package]
name = "Checksum-Sentinel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "css"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
digest = "0.10.7"
env_logger = "0.11.8"
futures = "0.3.31"
generic-array = "0.14"
log = "0.4.28"
md-5 = "0.10.6"
notify = "8.2.0"
notify-rust = "4.11.7"
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
yara = "0.30.0"
zip = "6.0.0"
