[project]
name = "css-update"
version = "0.1.0"
description = "Hash database updater for Checksum-Sentinel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
]

[project.scripts]
css-update = "css_update:main"

[tool.setuptools.packages.find]
where = ["."]
